ajustando layout da lista de produtos, layout de novo produto

--- a/lista-crud-app/src/app/menu/menu.component.html
+++ b/lista-crud-app/src/app/menu/menu.component.html
@@ -21,6 +21,8 @@
       </button>
       <span>lista-crud-app</span>
     </mat-toolbar>
+    <div class="container">
    <router-outlet></router-outlet>
+  </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
