--- a/lista-crud-app/src/app/produto-novo/produto-novo.component.html
+++ b/lista-crud-app/src/app/produto-novo/produto-novo.component.html
@@ -1,3 +1,20 @@
-<p>
-  produto-novo works!
-</p>
+<div>
+  <h3>Adicionar Novo Produto</h3>
+</div>
+<div class="example-container">
+  <mat-form-field>
+    <input matInput placeholder="Input">
+  </mat-form-field>
+
+  <mat-form-field>
+    <textarea matInput placeholder="Textarea"></textarea>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-select placeholder="Select">
+      <mat-option value="option">Option</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button mat-button color="primary">Adicionar</button>
+</div>
