layout novo produto e editar produto

--- a/lista-crud-app/src/app/produto-novo/produto-novo.component.html
+++ b/lista-crud-app/src/app/produto-novo/produto-novo.component.html
@@ -3,17 +3,13 @@
 </div>
 <div class="example-container">
   <mat-form-field>
-    <input matInput placeholder="Input">
+    <input matInput name="preco_produto" placeholder="Nome do Produto">
   </mat-form-field>
-
   <mat-form-field>
-    <textarea matInput placeholder="Textarea"></textarea>
-  </mat-form-field>
-
+    <textarea  matInput name="desc_produto" placeholder="Descrição do Produto"></textarea>
+  </mat-form-field>  
   <mat-form-field>
-    <mat-select placeholder="Select">
-      <mat-option value="option">Option</mat-option>
-    </mat-select>
+    <input matInput name="preco_produto" placeholder="Preço do Produto">
   </mat-form-field>
 
   <button mat-button color="primary">Adicionar</button>
