detalhe do produto e editar produto

--- a/lista-crud-app/src/app/produto-editar/produto-editar.component.html
+++ b/lista-crud-app/src/app/produto-editar/produto-editar.component.html
@@ -1,3 +1,16 @@
-<p>
-  produto-editar works!
-</p>
+<div>
+  <h3>Editar Produto x</h3>
+</div>
+<div class="example-container">
+  <mat-form-field>
+    <input matInput name="preco_produto" placeholder="Nome do Produto">
+  </mat-form-field>
+  <mat-form-field>
+    <textarea  matInput name="desc_produto" placeholder="Descrição do Produto"></textarea>
+  </mat-form-field>  
+  <mat-form-field>
+    <input matInput name="preco_produto" placeholder="Preço do Produto">
+  </mat-form-field>
+
+  <button mat-button color="primary">Editar</button>
+</div>
