implemetação dos componentes novo, editar e detalhe, utilizando a api

--- a/lista-crud-app/src/app/produto-detalhe/produto-detalhe.component.html
+++ b/lista-crud-app/src/app/produto-detalhe/produto-detalhe.component.html
@@ -1,3 +1,27 @@
-<mat-card>
-  Simple card
-</mat-card>
+<div class="example-container mat-elevation-z8">
+    <div class="example-loading-shade"
+         *ngIf="isLoadingResults">
+      <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
+    <div class="button-row">
+      <button mat-flat-button color="accent" [routerLink]="['/produtos']"><mat-icon>list</mat-icon> Voltar</button>
+    </div>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title><h2>{{produto.nome_produto}}</h2></mat-card-title>
+        <mat-card-subtitle>{{produto.desc_produto}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <dl>
+          <dt>Preço:</dt>
+          <dd>{{produto.preco_produto}}</dd>
+          <dt>Atualizado em:</dt>
+          <dd>{{produto.dt_atualizacao | date}}</dd>
+        </dl>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="primary" class="teste" [routerLink]="['/produto-editar', produto._id]"><mat-icon>edit</mat-icon> Editar</button>
+        <button mat-flat-button color="warn" (click)="deleteProduto(produto._id)"><mat-icon>delete</mat-icon> Excluir</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
