--- a/lista-crud-app/src/app/produtos/produtos.component.html
+++ b/lista-crud-app/src/app/produtos/produtos.component.html
@@ -6,30 +6,29 @@
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
-
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="nome">
     <th mat-header-cell *matHeaderCellDef> Nome </th>
     <td mat-cell *matCellDef="let element"> {{element.nome_produto}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
+  <ng-container matColumnDef="preco">
     <th mat-header-cell *matHeaderCellDef> Preço </th>
     <td mat-cell *matCellDef="let element"> {{element.preco_produto}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
+  <ng-container matColumnDef="desc">
     <th mat-header-cell *matHeaderCellDef> Descrição </th>
     <td mat-cell *matCellDef="let element"> {{element.desc_produto}} </td>
   </ng-container>
 
+  <!-- Position Column -->
+  <ng-container matColumnDef="acao">
+      <th mat-header-cell *matHeaderCellDef>  </th>
+      <td mat-cell *matCellDef="let element"> <button mat-flat-button color="accent" routerLink="/produto-detalhe/{{element._id}}" selected>Detalhe</button></td>
+    </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
