--- a/lista-crud-app/src/app/produtos/produtos.component.html
+++ b/lista-crud-app/src/app/produtos/produtos.component.html
@@ -15,7 +15,7 @@
   <!-- Weight Column -->
   <ng-container matColumnDef="preco">
     <th mat-header-cell *matHeaderCellDef> Preço </th>
-    <td mat-cell *matCellDef="let element"> {{element.preco_produto}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.preco_produto | currency:'BRL'}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
