adicionando o login ao projeto, sem api

--- a/lista-crud-app/src/app/menu/menu.component.html
+++ b/lista-crud-app/src/app/menu/menu.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/produtos" routerLinkActive="active">Produtos</a>
       <a mat-list-item routerLink="/produto-novo" routerLinkActive="active">Novo Produto</a>
+      <button (click)="logout()" mat-raised-button>Logout</button>    
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
